# Visionra-AI

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py
config/: settings.py
llm/: __init__.py  groq_client.py
memory/: __init__.py  session.py
prompts/: __init__.py  framework.py  idea_eval.py  knowledge.py
tests/: test_agent.py  test_tools.py
tools/: __init__.py  framework_tool.py  idea_eval_tool.py  knowledge_tool.py
utils/: __init__.py  helpers.py
